# tensor-tools

./: CMakeLists.txt  any_tensor.cpp  any_tensor.hpp  tensor.hpp  test.cpp
